--- a/notebooks/collab_training_pipeline_pseudolabeling.ipynb
+++ b/notebooks/collab_training_pipeline_pseudolabeling.ipynb
@@ -6087,7 +6087,7 @@
         "samples2preds_all = {}\n",
         "samples2trues_all = {}\n",
         "\n",
-        "\n",
+        "models = []\n",
         "for i in range(config[\"training\"][\"n_folds\"]):\n",
         "    model_name = config[\"general\"][\"model_name\"]\n",
         "    model = None\n",
@@ -6124,7 +6124,7 @@
         "    scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer,\n",
         "                                                      T_max=(config[\"training\"][\"n_epochs\"] - config[\"training\"][\"n_epochs_flat\"])  * len(train_dataloader),\n",
         "                                                      eta_min=1e-8)    \n",
-        "    samples2preds, samples2trues = training(EPOCHS=EPOCHS, model=model,\n",
+        "    samples2preds, samples2trues, model = training(EPOCHS=EPOCHS, model=model,\n",
         "                                            train_dataloader=train_dataloader, \n",
         "                                            val_dataloaders_dct={\"val_dataloader\": val_dataloader,\n",
         "                                                                  \"val_private_dataloader\": val_private_dataloader},\n",
@@ -6132,6 +6132,7 @@
         "                                            optimizer=optimizer, scheduler=scheduler,\n",
         "                                            config=config, fold=i,\n",
         "                                            task_type=config[\"general\"][\"task_type\"], CONFIG_PATH=PATH_TO_CFG)\n",
+        "    models.append(model)\n",
         "    samples2preds_all.update(samples2preds)\n",
         "    samples2trues_all.update(samples2trues)"
       ],
@@ -6937,19 +6938,20 @@
         "LR = config[\"training\"][\"lr\"]\n",
         "flag_LR = True\n",
         "\n",
-        "for j in range(config[\"pseudo\"][\"n_epochs\"]):\n",
-        "    models = []\n",
+        "for j in range(config[\"pseudo\"][\"iter\"]):\n",
+        "    with torch.no_grad():\n",
+        "        train, test = pseudolabeling(models, train, test, config)\n",
+        "        private = (train[\"type\"].values == \"private\").sum()\n",
+        "        public = (train[\"type\"].values == \"public\").sum()\n",
+        "        print(\"Pseudo labeling epoch\", j)\n",
+        "        print(\"Private ratio\", private / (public + private)) \n",
+        "        print(\"Public ratio\", public / (public + private))\n",
+        "        if flag_LR:\n",
+        "            LR *= config[\"pseudo\"][\"lr_coef\"]\n",
+        "            flag_LR = False\n",
+        "    \n",
         "    for i in range(config[\"training\"][\"n_folds\"]):\n",
-        "        model_name = config[\"general\"][\"model_name\"]\n",
-        "        model = None\n",
-        "        model = ENCODER_PARAMS[model_name][\"init_op\"]()\n",
-        "        model = Wrapper(model, feat_module=None, classes_num=config[\"general\"][\"classes_num\"],\n",
-        "                        model_name=model_name,\n",
-        "                        spec_augmenter=None, \n",
-        "                        mixup_module=None,\n",
-        "                        task_type=config[\"general\"][\"task_type\"],\n",
-        "                        activation_func=config[\"training\"][\"activation_func\"],\n",
-        "                        criterion_aam=criterion_aam)\n",
+        "        model = models[i]\n",
         "        model.to(DEVICE)\n",
         "        optimizer = torch.optim.Adam(model.parameters(), lr=LR)\n",
         "    #         optimizer = Ranger(model.parameters(),\n",
@@ -6973,9 +6975,9 @@
         "        val_private_dataloader = DataLoader(val_private_dataset,\n",
         "                                            **config[\"validation\"][\"dataloader\"])\n",
         "        scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer,\n",
-        "                                                          T_max=(config[\"training\"][\"n_epochs\"] - config[\"training\"][\"n_epochs_flat\"])  * len(train_dataloader),\n",
+        "                                                          T_max=(config[\"pseudo\"][\"n_epochs\"] - config[\"pseudo\"][\"n_epochs_flat\"])  * len(train_dataloader),\n",
         "                                                          eta_min=1e-8)    \n",
-        "        samples2preds, samples2trues, model = training(EPOCHS=EPOCHS, model=model,\n",
+        "        samples2preds, samples2trues, model = training(EPOCHS=config[\"pseudo\"][\"n_epochs\"], model=model,\n",
         "                                                train_dataloader=train_dataloader, \n",
         "                                                val_dataloaders_dct={\"val_dataloader\": val_dataloader,\n",
         "                                                                      \"val_private_dataloader\": val_private_dataloader},\n",
@@ -6983,20 +6985,9 @@
         "                                                optimizer=optimizer, scheduler=scheduler,\n",
         "                                                config=config, fold=i, pseudo_iter=j,\n",
         "                                                task_type=config[\"general\"][\"task_type\"], CONFIG_PATH=PATH_TO_CFG)\n",
-        "        models.append(model)\n",
+        "        models[i] = model\n",
         "        samples2preds_all.update(samples2preds)\n",
-        "        samples2trues_all.update(samples2trues)\n",
-        "\n",
-        "    with torch.no_grad():\n",
-        "        train, test = pseudolabeling(models, train, test, config)\n",
-        "        private = (train[\"type\"].values == \"private\").sum()\n",
-        "        public = (train[\"type\"].values == \"public\").sum()\n",
-        "        print(\"Pseudo labeling epoch\", j)\n",
-        "        print(\"Private ratio\", private / (public + private)) \n",
-        "        print(\"Public ratio\", public / (public + private))\n",
-        "        if flag_LR:\n",
-        "            LR *= config[\"pseudo\"][\"lr_coef\"]\n",
-        "            flag_LR = False"
+        "        samples2trues_all.update(samples2trues)\n"
       ],
       "execution_count": 68,
       "outputs": [
