--- a/notebooks/collab_training_pipeline_pseudolabeling.ipynb
+++ b/notebooks/collab_training_pipeline_pseudolabeling.ipynb
@@ -945,11 +945,7 @@
     "if COLAB:\n",
     "    config[\"general\"][\"out_path\"] = \"IDAO_2021_oski/experiments/resnest14d_1e-4_joint_BCE_L1/\"\n",
     "else:\n",
-    "    config[\"general\"][\"out_path\"] = \"../experiments/resnest14d_1e-4_joint_BCE_L1/\"\n",
-    "    \n",
-    "config[\"preprocessing\"][\"img_size\"] = [224, 224]\n",
-    "config[\"training\"][\"dataloader\"][\"batch_size\"] = 4\n",
-    "config[\"training\"][\"n_folds\"] = 3"
+    "    config[\"general\"][\"out_path\"] = \"../experiments/resnest14d_1e-4_joint_BCE_L1/\""
    ]
   },
   {
